--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.1",
     "react-spinners": "^0.13.8",
+    "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
