--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "homepage": "https://github.com/3omeed/my-Portfolio",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.1",
     "react-spinners": "^0.13.8",
