--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+  },
+  "engines": {
+    "node": ">=22.0.0"
   }
 }
